# memlord

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE-COMMERCIAL  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 2026_03_13_1300-8f993ec86e3b_init.py  2026_03_13_1305-048d3c4206dc_add_fts_vec_triggers.py  2026_03_16_2209-4619bcad3d0c_.py  2026_03_16_2327-505be13792ad_.py  2026_03_16_2349-2a6c4515f145_.py  2026_03_19_1754-ffd5e65054bc_add_workspace_description.py  2026_03_20_0001-a1b2c3d4e5f6_add_revoked_tokens.py  2026_04_06_1245-f8c1fc9be252_add_memory_name.py  2026_04_08_0002-f8c1fc9be252_add_memory_name.py
scripts/: reembed.py
src/memlord/: config.py  db.py  embeddings.py  main.py  oauth.py  search.py
src/memlord/api/: memories.py  search.py  workspaces.py
src/memlord/dao/: memory.py  user.py  workspace.py
src/memlord/models/: memory.py  workspace.py
src/memlord/schemas/: __init__.py  delete.py  list_memories.py  memory_response.py  recall.py  search.py  store.py  update.py  workspace.py
src/memlord/templates/: _memory_content.html  base.html  index.html  memory.html  search.html  workspace_detail.html  workspace_new.html  workspaces.html
src/memlord/tools/: delete.py  get_memory.py  list_memories.py  (+6 more)
src/mnemos/: config.py  db.py  main.py  oauth.py  search.py  server.py  ui.py
tests/: conftest.py  test_created_at_tz.py  test_dao.py  test_data.py  test_move.py  test_pipeline.py  test_rest_pipeline.py  test_search.py
(+42 files in other folders)
